--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,5 @@
 
 
 [build]
-  base = "."
-  publish = "build"        # adjust publish directory as needed
   command = "npm run build"
+  publish = "dist/public"
