--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
+
 [build]
   base = "client"
-  publish = "dist"
   command = "npm run build"
-
+  publish = "dist/public"
 [[redirects]]
   from = "/*"
   to = "/index.html"
