--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
-
 [build]
-  base = "client"
-  command = "npm run build"
+  command = "cd client && npm ci && npm run build"
   publish = "dist/public"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
