--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "cd client && npm ci && npm run build"
-  publish = "dist/public"
+  base = "client"
+  publish = "dist"
+  command = "npm run build"
 
 [[redirects]]
   from = "/*"
